--- a/package.json
+++ b/package.json
@@ -10,8 +10,34 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "6.1.2",
     "expo": "~45.0.0",
+    "expo-asset": "~8.5.0",
+    "expo-barcode-scanner": "~11.3.0",
+    "expo-battery": "~6.2.0",
+    "expo-blur": "~11.1.0",
+    "expo-brightness": "~10.2.0",
+    "expo-camera": "~12.2.0",
+    "expo-cellular": "~4.2.0",
+    "expo-checkbox": "~2.1.0",
+    "expo-constants": "~13.1.1",
+    "expo-contacts": "~10.2.0",
+    "expo-crypto": "~10.2.0",
+    "expo-device": "~4.2.0",
+    "expo-document-picker": "~10.2.1",
+    "expo-face-detector": "~11.2.0",
+    "expo-firebase-analytics": "~7.0.0",
+    "expo-font": "~10.1.0",
+    "expo-image-manipulator": "~10.3.1",
+    "expo-image-picker": "~13.1.1",
+    "expo-local-authentication": "~12.2.0",
+    "expo-localization": "~13.0.0",
+    "expo-location": "~14.2.2",
+    "expo-mail-composer": "~11.2.0",
+    "expo-sensors": "~11.3.0",
     "expo-status-bar": "~1.3.0",
+    "i18n-js": "^3.9.2",
+    "lottie-react-native": "5.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
